feat: Implement Locator Guide with Dark Mode support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
     },
     "nav": {
         "basic": "📝 Basic Elements",
+        "locatorGuide": "🎯 Locator",
         "complex": "🎯 Complex Interactions",
         "advanced": "🚀 Advanced Scenarios",
         "table": "📊 Data Table",
