--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -11,6 +11,7 @@
     },
     "nav": {
         "basic": "📝 Temel Elementler",
+        "locatorGuide": "🎯 Locate Alma",
         "complex": "🎯 Karmaşık Etkileşimler",
         "advanced": "🚀 Gelişmiş Senaryolar",
         "table": "📊 Veri Tablosu",
