Remove back to website button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,8 +6,7 @@
     "buttons": {
         "darkMode": "Dark Mode",
         "lightMode": "Light Mode",
-        "homeTooltip": "Back to top",
-        "backToWebsite": "back to hasankocaman.net"
+        "homeTooltip": "Back to top"
     },
     "nav": {
         "basic": "📝 Basic Elements",
