--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -6,8 +6,7 @@
     "buttons": {
         "darkMode": "Karanlık Mod",
         "lightMode": "Aydınlık Mod",
-        "homeTooltip": "Sayfanın başına dön",
-        "backToWebsite": "hasankocaman.net sayfasına dön"
+        "homeTooltip": "Sayfanın başına dön"
     },
     "nav": {
         "basic": "📝 Temel Elementler",
