feat: localize Locator Guide content

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -146,5 +146,86 @@
         "seleniumStrength": "Mature, flexible, wide language and browser support",
         "playwrightStrength": "Modern, fast, powerful API and network control",
         "finalAdvice": "Choose the most suitable tool according to your project requirements, team skills, and test scope."
+    },
+    "locator": {
+        "title": "🎯 Selenium vs Playwright Locator Guide",
+        "subtitle": "Migration from Java Selenium to TypeScript Playwright",
+        "tabs": {
+            "comparison": "📊 Comparison (20 Examples)",
+            "playwrightOnly": "🎭 Playwright Only (20 Examples)"
+        },
+        "headers": {
+            "html": "📝 HTML Code:",
+            "selenium": "☕ Java Selenium",
+            "playwright": "🎭 TypeScript Playwright",
+            "playwrightOnlyFeatures": "🎭 The following features are only available in Playwright!",
+            "example": "Example",
+            "playwrightExample": "Playwright Example"
+        },
+        "tips": {
+            "prefix": "💡 Tip:",
+            "comp1": "CSS selectors are default in Playwright. Use # for ID.",
+            "comp2": "Use . (dot) for Class.",
+            "comp3": "Use square brackets for Attribute selectors.",
+            "comp4": "Role-based selectors in Playwright are more accessible and reliable.",
+            "comp5": "Using getByRole is faster and more readable than XPath.",
+            "comp6": "CSS selectors work the same way in both frameworks.",
+            "comp7": "Playwright's getByPlaceholder method is much more practical.",
+            "comp8": "getByLabel is much cleaner than complex XPaths.",
+            "comp9": "Using role-based selectors for headings is best practice.",
+            "comp10": "Test IDs are the most reliable selectors in test environments.",
+            "comp11": "In Playwright, locator captures multiple elements automatically.",
+            "comp12": "You can do partial text search with getByText.",
+            "comp13": "getByAltText is the best option for images.",
+            "comp14": "Chained selectors are cleaner in Playwright.",
+            "comp15": "Using role for checkboxes is a more semantic approach.",
+            "comp16": "You can use selectOption() method for dropdowns.",
+            "comp17": "getByRole('cell') can also be used for tables.",
+            "comp18": "getByTitle is very practical for title attributes.",
+            "comp19": "Locator chaining is more readable in Playwright.",
+            "comp20": "Combining with dot is the same for multiple classes.",
+            "pw1": "You can select the first of multiple elements with first().",
+            "pw2": "last() selects the last element in the list.",
+            "pw3": "You can select the element at a specific index with nth(index). Index starts from 0.",
+            "pw4": "You can filter elements by text or other criteria with filter().",
+            "pw5": "You can find a parent containing a specific element with has.",
+            "pw6": "You can check element state with Playwright assertion methods.",
+            "pw7": "You can easily check element states (enabled/disabled).",
+            "pw8": "Special methods are available for checkbox operations.",
+            "pw9": "toHaveText checks exact match, toContainText checks partial match.",
+            "pw10": "Checking or getting input values is very easy.",
+            "pw11": "You can check class existence with string or regex.",
+            "pw12": "You can check any HTML attribute or get its value.",
+            "pw13": "You can check or get the count of found elements.",
+            "pw14": "You can easily check link href and page URL.",
+            "pw15": "Playwright automatically waits for elements to be ready!",
+            "pw16": "You can make more specific selections by chaining locators.",
+            "pw17": "You can select from dropdown in 3 different ways.",
+            "pw18": "You can easily access elements inside iframe with frameLocator.",
+            "pw19": "You can get all elements as array with all() and loop through them.",
+            "pw20": "You can upload files even to hidden file inputs."
+        },
+        "actions": {
+            "firstElement": "🎭 Playwright - Select First Element:",
+            "lastElement": "🎭 Playwright - Select Last Element:",
+            "nthElement": "🎭 Playwright - Select Element by Index:",
+            "filtering": "🎭 Playwright - Filtering:",
+            "hasElement": "🎭 Playwright - Filtering by Child:",
+            "visibility": "🎭 Playwright - Visibility Check:",
+            "stateCheck": "🎭 Playwright - State Check:",
+            "checkboxCheck": "🎭 Playwright - Checkbox Check:",
+            "textContent": "🎭 Playwright - Text Content Check:",
+            "inputValue": "🎭 Playwright - Input Value Check:",
+            "classCheck": "🎭 Playwright - Class Check:",
+            "attributeCheck": "🎭 Playwright - Attribute Check:",
+            "elementCount": "🎭 Playwright - Element Count:",
+            "urlCheck": "🎭 Playwright - URL Check:",
+            "autoWait": "🎭 Playwright - Auto Wait:",
+            "chaining": "🎭 Playwright - Chained Locators:",
+            "dropdownSelection": "🎭 Playwright - Dropdown Selection:",
+            "frameElement": "🎭 Playwright - Element inside Frame:",
+            "allElements": "🎭 Playwright - Get All Elements:",
+            "fileUpload": "🎭 Playwright - File Upload:"
+        }
     }
 }
