--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -146,5 +146,86 @@
         "seleniumStrength": "Olgun, esnek, geniş dil ve tarayıcı desteği",
         "playwrightStrength": "Modern, hızlı, güçlü API ve network kontrolü",
         "finalAdvice": "Proje gereksinimlerinize, ekibinizin becerilerine ve test kapsamınıza göre en uygun aracı seçin."
+    },
+    "locator": {
+        "title": "🎯 Selenium vs Playwright Locator Rehberi",
+        "subtitle": "Java Selenium'dan TypeScript Playwright'e Geçiş",
+        "tabs": {
+            "comparison": "📊 Karşılaştırma (20 Örnek)",
+            "playwrightOnly": "🎭 Sadece Playwright (20 Örnek)"
+        },
+        "headers": {
+            "html": "📝 HTML Kodu:",
+            "selenium": "☕ Java Selenium",
+            "playwright": "🎭 TypeScript Playwright",
+            "playwrightOnlyFeatures": "🎭 Aşağıdaki özellikler sadece Playwright'ta mevcuttur!",
+            "example": "Örnek",
+            "playwrightExample": "Playwright Örnek"
+        },
+        "tips": {
+            "prefix": "💡 İpucu:",
+            "comp1": "Playwright'ta CSS seçiciler varsayılandır. ID için # kullanırız.",
+            "comp2": "Class için . (nokta) kullanırız.",
+            "comp3": "Attribute seçiciler için köşeli parantez kullanırız.",
+            "comp4": "Playwright'ta role-based seçiciler daha erişilebilir ve güvenilirdir.",
+            "comp5": "XPath yerine getByRole kullanmak daha hızlı ve okunabilirdir.",
+            "comp6": "CSS seçiciler her iki frameworkte de aynı şekilde çalışır.",
+            "comp7": "Playwright'ın getByPlaceholder metodu çok daha pratiktir.",
+            "comp8": "getByLabel karmaşık XPath'lerden çok daha temizdir.",
+            "comp9": "Heading'ler için role-based seçici kullanmak best practice'tir.",
+            "comp10": "Test ID'leri test ortamında en güvenilir seçicidir.",
+            "comp11": "Playwright'ta locator birden fazla elementi otomatik yakalar.",
+            "comp12": "getByText ile partial text araması yapabilirsiniz.",
+            "comp13": "Görseller için getByAltText en iyi seçenektir.",
+            "comp14": "Playwright'ta zincirleme seçici daha temizdir.",
+            "comp15": "Checkbox için role kullanmak daha semantik bir yaklaşımdır.",
+            "comp16": "Dropdown'lar için selectOption() metodunu kullanabilirsiniz.",
+            "comp17": "Tablo için getByRole('cell') da kullanılabilir.",
+            "comp18": "Title attribute'u için getByTitle çok pratiktir.",
+            "comp19": "Playwright'ta locator zincirleme daha okunabilirdir.",
+            "comp20": "Birden fazla class için nokta ile birleştirme aynıdır.",
+            "pw1": "first() metodu ile birden fazla elementten ilkini seçebilirsiniz.",
+            "pw2": "last() metodu listedeki son elementi seçer.",
+            "pw3": "nth(index) ile belirli sıradaki elementi seçebilirsiniz. Index 0'dan başlar.",
+            "pw4": "filter() metodu ile elementleri metin veya başka kriterlere göre süzebilirsiniz.",
+            "pw5": "has ile belirli bir elementi içeren parent'ı bulabilirsiniz.",
+            "pw6": "Playwright'ın assertion metodları ile elementin durumunu kontrol edebilirsiniz.",
+            "pw7": "Element durumlarını (enabled/disabled) kolayca kontrol edebilirsiniz.",
+            "pw8": "Checkbox işlemleri için özel metodlar mevcuttur.",
+            "pw9": "toHaveText tam eşleşme, toContainText kısmi eşleşme kontrol eder.",
+            "pw10": "Input değerlerini kontrol etmek veya almak çok kolaydır.",
+            "pw11": "Class varlığını string veya regex ile kontrol edebilirsiniz.",
+            "pw12": "Herhangi bir HTML attribute'unu kontrol edebilir veya değerini alabilirsiniz.",
+            "pw13": "Bulunan element sayısını kontrol edebilir veya alabilirsiniz.",
+            "pw14": "Link href'ini ve sayfa URL'ini kolayca kontrol edebilirsiniz.",
+            "pw15": "Playwright elementlerin hazır olmasını otomatik bekler!",
+            "pw16": "Locator'ları zincirleyerek daha spesifik seçimler yapabilirsiniz.",
+            "pw17": "Dropdown'da 3 farklı şekilde seçim yapabilirsiniz.",
+            "pw18": "frameLocator ile iframe içindeki elementlere kolayca erişebilirsiniz.",
+            "pw19": "all() metodu ile tüm elementleri array olarak alıp loop yapabilirsiniz.",
+            "pw20": "Gizli file input'lara bile dosya yükleyebilirsiniz."
+        },
+        "actions": {
+            "firstElement": "🎭 Playwright - İlk Elementi Seçme:",
+            "lastElement": "🎭 Playwright - Son Elementi Seçme:",
+            "nthElement": "🎭 Playwright - Index ile Element Seçme:",
+            "filtering": "🎭 Playwright - Filtreleme:",
+            "hasElement": "🎭 Playwright - İçinde Element Barındırma:",
+            "visibility": "🎭 Playwright - Görünürlük Kontrolü:",
+            "stateCheck": "🎭 Playwright - Durum Kontrolü:",
+            "checkboxCheck": "🎭 Playwright - Checkbox Kontrolü:",
+            "textContent": "🎭 Playwright - Metin İçeriği Kontrolü:",
+            "inputValue": "🎭 Playwright - Input Değeri Kontrolü:",
+            "classCheck": "🎭 Playwright - Class Kontrolü:",
+            "attributeCheck": "🎭 Playwright - Attribute Kontrolü:",
+            "elementCount": "🎭 Playwright - Element Sayısı:",
+            "urlCheck": "🎭 Playwright - URL Kontrolü:",
+            "autoWait": "🎭 Playwright - Otomatik Bekleme:",
+            "chaining": "🎭 Playwright - Zincirleme Locator:",
+            "dropdownSelection": "🎭 Playwright - Dropdown Seçimi:",
+            "frameElement": "🎭 Playwright - Frame İçi Element:",
+            "allElements": "🎭 Playwright - Tüm Elementleri Alma:",
+            "fileUpload": "🎭 Playwright - Dosya Yükleme:"
+        }
     }
 }
